Started the dev of game page

--- a/battleship-setup.html
+++ b/battleship-setup.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="battleship-style.css">
 </head>
 
-<body>
+<body onload="createBoard(); setEventListeners()">
 
     <!--First Player-->
     <div class="setup-container player1" id="background">
