--- a/battleship-game.html
+++ b/battleship-game.html
@@ -6,17 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BattleshipGame</title>
     <link rel="stylesheet" href="battleship-style.css">
+    <script src="https://kit.fontawesome.com/9167035af7.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body onload="initGamePage()">
 
     <div class="game-container" id="background">
-        <div class="game-board"></div>
-        <div class="game-board"></div>
+        <div class="player-field-container">
+            <div class="player-container">
+                <div class="player-state" id="player-state1"></div>
+                <h2 class="player-name" id="player-name1"></h2>
+            </div>
+            <div class="game-board"></div>
+        </div>
+        <div class="player-field-container">
+            <div class="player-container">
+                <div class="player-state" id="player-state2"></div>
+                <h2 class="player-name" id="player-name2"></h2>
+            </div>
+            <div class="game-board"></div>
+        </div>
     </div>
 
 
 </body>
 <script src="battleship-setup-script.js"></script>
+<script src="battleship-game-script.js"></script>
 
 </html>
