--- a/battleship-game.html
+++ b/battleship-game.html
@@ -26,7 +26,26 @@
             </div>
             <div class="game-board"></div>
         </div>
-    </div>
+
+        <div class="board-legend">
+            <h3>Board legend: </h3>
+            <div class="single-mark">
+                <div class="destroyed-cell" style="width: 25px; height: 25px;"></div>
+                <p> Destroyed ship</p>
+            </div>
+            <div class="single-mark">
+                <div class="damaged-cell" style="width: 25px; height: 25px;"></div>
+                <p> Destroyed ship part</p>
+            </div>
+            <div class="single-mark">
+                <div class="hit-water-cell" style="width: 25px; height: 25px;"></div>
+                <p> Miss</p>
+            </div>
+            <div class="single-mark">
+                <div class="taken-cell" style="width: 25px; height: 25px;"></div>
+                <p> Ship (ship part)</p>
+            </div>
+        </div>
 
 
 </body>
